# FCR_data

./: LICENSE  README.md  pyproject.toml
data/: dataset.csv  mapping.json
