[tool.poetry]
name = "FCR_dataset"
version = "0.1.0"
description = "Simple notebook showing how to load the dataset and visualises it."
authors = ["Korbinian Pfab <korbinian.pfab@siemens.com>"]

[tool.poetry.dependencies]
python = "^3.8.8"
pandas = "^1.5.1"
scikit-learn = "^1.1.3"
plotly = "^5.11.0"
ipywidgets = "8.0.2" 
jupyter = "^1.0.0"
ipykernel = "^6.17.0"
black = "^22.10.0"
seaborn = "^0.12.1"
pyarrow = "^10.0.1"
kaleido = "0.0.3"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
